@@ -226,14 +226,22 @@ $m2->checkin();
 is($m2->checked_out, 0, 'Krang::Media->checked_out');
 is($m2->checked_out_by, undef, 'Krang::Media->checked_out_by');
 
+# test renaming of media file
+$m2->checkout;
+$m2->{filename} = 'renamed.jpg';
+$m2->save;
+$m2->checkin;
+is ($m2->filename, 'renamed.jpg');
+ok (-e $m2->file_path);
+
 # test pruning of old versions
 my @all_versions = @{$m2->all_versions};
-is (@all_versions, 3);
+is (@all_versions, 4);
 $m2->prune_versions(number_to_keep => 2);
 @all_versions = @{$m2->all_versions};
 is (@all_versions, 2);
-is ($all_versions[0], 2);
-is ($all_versions[1], 3);
+is ($all_versions[0], 3);
+is ($all_versions[1], 4);
 
 # test mark_as_published
 $m2->mark_as_published();
